// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gif Grid debe mostrar correctamente el snapshot 1`] = `
<Fragment>
  <h1
    className="animate__animated animate__bounce"
  >
    Demon Slayer
  </h1>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Gif Grid debe mostrar items el snapshot 1`] = `
<Fragment>
  <h1
    className="animate__animated animate__bounce"
  >
    Demon Slayer
  </h1>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Titke Mock"
      url="http://mock:img"
    />
  </div>
</Fragment>
`;
